# gl-profiler

./: .gitignore  CMakeLists.txt  README.md
include/glp/: profiler.h
src/: profiler.cpp
